p2/conf/app3.yaml
# --- THE DEPLOYMENT (The App) ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3-container
          image: hashicorp/http-echo
          args:
            - "-text=app3"
            - "-listen=:8080"
          ports:
            - containerPort: 8080

---
# --- THE SERVICE (The Internal Load Balancer) ---
apiVersion: v1
kind: Service
metadata:
  name: app3-service
spec:
  selector:
    app: app3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
